# Flowtime

./: .gitignore  Cargo.toml  Flowtime.doap  README.md  io.github.diegoivanme.flowtime.json  meson.build  vala-lint.conf
build-aux/flatpak/: io.github.diegoivanme.flowtime.devel.json  io.github.diegoivanme.flowtime.json
data/: io.github.diegoivanme.flowtime.appdata.xml.in  io.github.diegoivanme.flowtime.desktop.in  io.github.diegoivanme.flowtime.gschema.xml  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  be.po  bg.po  de.po  es.po  flowtime.pot  fr.po  he.po  hi.po  it.po  meson.build  nl.po  pt_BR.po  ru.po  tr.po  zh_CN.po
src/: Application.vala  QuoteLabel.vala  Timer.vala  Window.vala  XmlUtils.vala  application.rs  flowtime.gresource.xml  main.rs  main.vala  meson.build  models.rs  services.rs  widgets.rs  window.rs
src/Interfaces/: Timer.vala
src/Models/: Day.vala  InformationHolder.vala  Session.vala  StatObject.vala  State.vala
src/Services/: Alarm.vala  BackgroundStatusReporter.vala  BreakTimer.vala  ColorProvider.vala  Screensaver.vala  Settings.vala  Statistics.vala  Timer.vala  TonePlayer.vala  WorkTimer.vala
src/Widgets/: DistractionFreeWindow.vala  PauseButton.vala  PreferencesWindow.vala  QuoteLabel.vala  SmallView.vala  SoundRow.vala  StatCircle.vala  StatGraph.vala  StatInfo.vala  StatList.vala  StatPage.vala  StatRow.vala  StatsWindow.vala  TestWindow.vala  TimerPage.vala  Window.vala
src/models/: day.rs
src/services/: alarm.rs  settings.rs  statistics.rs  timer.rs
src/ui/: distractionfreewindow.ui  flowtime.gresource.xml  preferenceswindow.blp  preferenceswindow.ui  smallview.blp  smallview.ui  statcircle.blp  statcircle.ui  statinfo.blp  statlist.blp  statlist.ui  statpage.blp  statpage.ui  statrow.blp  statrow.ui  statwindow.blp  statwindow.ui  style.css  timerpage.blp  timerpage.ui  window.blp  window.ui
src/ui/sounds/: README.md
src/vapi/: config.vapi
src/widgets/: timer_page.rs
